--- a/scripts/quarto/quarto_teachingkey.qmd
+++ b/scripts/quarto/quarto_teachingkey.qmd
@@ -3,6 +3,7 @@ title: "The Challenger Space Shuttle Disaster"
 author: "Prof. Bell"
 date: 2023-09-27
 format: html
+# format: gfm
 execute:
   echo: false
 knitr:
@@ -21,10 +22,18 @@ Quarto is able to generate reports as HTML, PDF, Word, and other file types. Bec
 
 There are three basic principles of Quarto that you should know before we get started:
 
-* Quarto is a separate tool from R and RStudio. In fact, Quarto can be used with many different coding languages. For that reason, we will now be working with `.qmd` scripts rather than `.R` scripts. Quarto itself uses it's own language, as well as another language called Markdown. If you get stuck, go to the "Help" drop-down menu to go to the Quarto cheatsheet or the Markdown Quick Reference.
-* When you render a Quarto document, it is as if you are running your code in a **brand new** R session. This means that none of the objects in your Environment pane will be known to your `.qmd` file. Any objects that you want to use in your Quarto document need to be created within the `.qmd` script. In addition, Quarto will be able to access all your installed packages, but you will need to load those packages with `library()` since the document is rendering in a new R session.
+* Quarto is a separate tool from R and RStudio. In fact, Quarto can be used with many different coding languages. For that reason, we will now be working with `.qmd` scripts rather than `.R` scripts.
+
+    Quarto itself uses it's own language, as well as another language called Markdown. If you get stuck, go to the "Help" drop-down menu to go to the Quarto cheatsheet or the Markdown Quick Reference.
+
+* When you render a Quarto document, it is as if you are running your code in a **brand new** R session. This means that none of the objects in your Environment pane will be known to your `.qmd` file. Any objects that you want to use in your Quarto document need to be created within the `.qmd` script.
+
+    In addition, Quarto will be able to access all your installed packages, but you will need to load those packages with `library()` since the document is rendering in a new R session.
+    
   + The [working directory](https://r4ds.hadley.nz/workflow-scripts.html#where-does-your-analysis-live) is the folder where the `.qmd` file lives.
+  
   + A `.qmd` file with an error in the code will not render.
+  
 * The R code you write in a `.qmd` script is just like the code that you write in an `.R` script, except that it will go inside of a "code chunk." You can create a new code chunk by clicking on the green "C" icon in the upper right of the Scripts pane. Code chunks will run in the order that the are written in the script (top to bottom), *except* for a special chunk called the `setup` chunk. The `setup` chunk is always run first. It should contain all of the introductory commands that we usually include at the beginning of our `.R` scripts. Here is the `setup` chunk for this document:
 
 ```{r}
@@ -74,9 +83,69 @@ ggplot(past_failures) +
   scale_y_continuous(limits = c(0, 6)) +
   labs(x = "Temperature (Fahrenheit)",
        y = "Number of Damaged O-rings",
-       title = "Missions with Damaged O-rings") +
+       title = "Missions with Damaged O-rings",
+       caption = "Source: {openintro} R package") +
   theme_minimal() +
   theme(plot.title = element_text(hjust = .5))
 ```
 
 From this data, there does not appear to be a clear correlation between temperature and O-ring failures. But here is the problem: we only know half of the story. With only these data points, we aren't seeing most of the data. How many missions did not have any failed O-rings?
+
+```{r}
+#| label: no-failures
+#| echo: true
+#| code-fold: true
+
+orings$fail <- ifelse(orings$damaged > 0, "Failed O-rings", "No Failed O-rings")
+
+ggplot(orings) +
+  geom_bar(aes(x = fail, fill = fail)) +
+  labs(x = "",
+       y = "Number of Missions",
+       title = "Missions with Damaged O-rings",
+       caption = "Source: {openintro} R package") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = .5),
+        legend.position = "none")
+```
+
+In fact, `r sum(orings$damaged > 0)` missions had no failed O-rings. How do the distributions of temperatures compare in these two groups?
+
+```{r}
+#| label: temperatures
+#| echo: true
+#| code-fold: true
+
+ggplot(orings) +
+  geom_histogram(aes(x = temperature), binwidth = 5) +
+  facet_wrap(~ fail) +
+  labs(x = "Temperature (Fahrenheit)",
+       y = "Number of Missions",
+       title = "Temperatures at Launch Time",
+       caption = "Source: {openintro} package") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = .5))
+```
+
+Now it seems much more likely that temperature is correlated with O-ring failure. Let's imagine that the NASA engineers had designed their scatterplot to show this difference:
+
+```{r}
+#| label: all-plotted
+#| echo: true
+#| code-fold: true
+
+ggplot(orings) +
+	geom_point(aes(x = temperature, y = damaged, color = fail)) +
+  scale_x_continuous(limits = c(50,85)) +
+  scale_y_continuous(limits = c(0, 6)) +
+  scale_color_manual(values = c("red", "blue")) +
+  labs(x = "Temperature (Fahrenheit)",
+       y = "Number of Damaged O-rings",
+       title = "Number of Damaged O-rings by Temperature",
+       color = "Status") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = .5),
+        legend.position = "bottom")
+```
+
+If NASA engineers had presented the data in this way, it seems much more likely that mission control would have cancelled the launch.
