--- a/scripts/data-viz/bellringer_types_of_graphs.qmd
+++ b/scripts/data-viz/bellringer_types_of_graphs.qmd
@@ -3,6 +3,7 @@ title: "Data Visualization Bellringer"
 author: "Prof. Bell"
 date: 2023-09-26
 format: html
+# format: gfm
 execute:
   echo: false
 editor_options: 
