Initial commit of data viz-quarto assignment: do not use the answer key though!

--- a/assignments/data-viz_and_quarto/data-viz_and_quarto_answerkey.Rmd
+++ b/assignments/data-viz_and_quarto/data-viz_and_quarto_answerkey.Rmd
@@ -7,7 +7,7 @@ graphics: yes
 
 title: "Assignment #2"
 author: Prof. Bell
-email: Spring 2023
+email: Fall 2023
 
 fontfamily: cochineal
 fontsize: 11pt
@@ -17,7 +17,20 @@ fontsize: 11pt
 knitr::opts_chunk$set(echo = T, include = T, fig.height = 4, fig.width = 6, fig.align = "center")
 ```
 
-Install the `moderndive` package and load the `house_prices` data. For this homework, please produce a nicely-formatted graph that helps answer each of the following questions. Put your graphs in a Word document (or other word processing software) and **include a brief (1-2 sentence) answer to the question.**
+For this homework, please produce a nicely-formatted graph that answers each of the following questions. A nicely-formatted graph includes:
+
+* Proper axis and legend labels
+* A title, preferably centered
+* A caption indicating the source of the data
+* Any other aesthetic elements that make the graph visually pleasing
+
+**Include a brief (1-2 sentence) written answer to the question as well.**
+
+You must submit your homework as a rendered Quarto document (HTML preferred, PDF and Word acceptable). Please ensure that all code used to generate the document (including your `setup` chunk) are visible in the report. However, extraneous code that is not required for answering the questions but that appears in your Quarto document will result in a deduction (for example, `glimpse()` should not appear anywhere in your rendered report).
+
+Please turn in your `.qmd` file, the `_files` directory, and your rendered Quarto document as a `.zip` folder on Blackboard. When you export multiple items from Posit Cloud at once, it will automatically be exported as a `.zip` (If you cannot get the report to render, you may turn in only the `.qmd` file, but will lose points on the Quarto elements of the grading rubric.)
+
+In your `setup` chunk, install the `moderndive` package and load the `house_prices` data. 
 
 ```{r, message = F}
 # Not run
@@ -27,7 +40,11 @@ library(moderndive)
 data(house_prices)
 ```
 
-1. Create a new variable for the month that a home was sold using this command: `house_prices$month <- lubridate::month(house_prices$date, label = T)`. What is the most popular month for home sales?
+1. Create a new variable for the month that a home was sold using this command:
+
+    `house_prices$month <- lubridate::month(house_prices$date, label = T)`
+
+    What is the most popular month for home sales?
 
 ```{r}
 house_prices$month <- lubridate::month(house_prices$date, label = T)
@@ -42,7 +59,7 @@ ggplot(data = house_prices) +
 	theme(plot.title = element_text(hjust = .5))
 ```
 
-2. In 1900, the population of King County was 110,053; in 2020, it was 2.3 million. Using home construction as an indicator of population growth, in what decade did the population of King County start to grow dramatically?
+2. In 1900, the population of King County was 110,053; in 2020, it was 2.3 million. In what decade did home construction in King County start to grow dramatically? (Hint: You do not need to create a new variable; explore the `binwidth` argument.)
 
 ```{r}
 ggplot(data = house_prices) +
@@ -55,12 +72,14 @@ ggplot(data = house_prices) +
 	theme(plot.title = element_text(hjust = .5))
 ```
 
-3. Do homes built after 1990 tend to have more bathrooms per bedroom than homes built before 1990? (Hint: You will need to use a logical statement when constructing your graph.)
+3. Design style has changed over the past century. Using a scatterplot, show how the number of bathrooms compares to the number of bedrooms. Do homes built on or after 1990 tend to have more bathrooms per bedroom than homes built before 1990?
+
+    *1 bonus point: Add best fit lines to the scatterplot to show the strength of the relationship between bathrooms and bedrooms before and after 1990. Comment on these relationships.*
 
 ```{r}
 ggplot(data = house_prices, aes(x = bedrooms, y = bathrooms, color = yr_built > 1990)) +
 	geom_point(alpha = .5) +
-	geom_smooth(method = "lm") +
+	geom_smooth(method = "lm", se = FALSE) +
 	labs(x = "Bedrooms",
 			 y = "Bathrooms",
 			 color = "Built after 1990?",
@@ -69,33 +88,9 @@ ggplot(data = house_prices, aes(x = bedrooms, y = bathrooms, color = yr_built > 
 	theme(plot.title = element_text(hjust = .5))
 ```
 
-4. Of the ten zip codes with the most homes sold in 2015, which was the most expensive zip code for new homes? (Please report prices in $1000s, so divide price by 1000.)
+4. What is the relationship between the condition of a home and it's price? Please report prices in $1000s, so divide price by 1000. (For condition, 1 = Poor, 2 = Fair, 3 = Average, 4 = Good, and 5 = Very Good.)
 
-The zip codes are:
-```{r, include = T}
-dplyr::count(house_prices, zipcode) %>%
-	dplyr::arrange(desc(n)) %>%
-	dplyr::slice_head(n = 10) %>% 
-	select(zipcode)
-```
-
-```{r}
-top_zips <- house_prices[house_prices$zipcode %in% c(98103, 98038, 98115, 98052, 98117, 98042, 98034, 98118, 98023, 98006),]
-# You might also have chosen to filter the data to 2015 sales specifically
-# Not run:
-# top_zips <- top_zips[top_zips$date >= as.Date("2015-01-01"),]
-
-ggplot(data = top_zips) +
-	geom_boxplot(aes(x = factor(zipcode), y = price/1000)) +
-	labs(x = "Zip Code",
-			 y = "Price ($1000s)",
-			 title = "Price of Homes Sold in Top Zip Codes, 2014-2015",
-			 caption = "Source: moderndive package") +
-	theme_bw() +
-	theme(plot.title = element_text(hjust = .5))
-```
-
-5. What is the relationship between the age of a home and it's price? Is age more or less important than condition in determining the price? (Please report prices in $1000s, so divide price by 1000.)
+    *2 bonus points: Compare the relationship between condition and price for older and newer homes (however you choose to define that) using facets. Comment on whether age impacts the relationship between condition and price.*
 
 ```{r}
 ggplot(data = house_prices, aes(x = 2015-yr_built, y = price/1000)) +
