--- a/assignments/data_wrangling/data_wrangling_homework.qmd
+++ b/assignments/data_wrangling/data_wrangling_homework.qmd
@@ -9,7 +9,7 @@ execute:
   warning: false
   message: false
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
 ---
 
 For this homework, we will use the `dplyr` verbs and functions that we learned in class to understand the relationship between interest rates and inflation in the United States. **You must answer these questions using the `dplyr` verbs and functions.**
@@ -80,7 +80,16 @@ df |>
             mean_ir = mean(Interest.Rate)) |>
   ggplot() +
     geom_line(aes(x = Year, y = mean_inflation), color = "orange") +
-    geom_line(aes(x = Year, y = mean_ir), color = "purple")
+    geom_line(aes(x = Year, y = mean_ir), color = "purple") +
+  labs(y = "Rate",
+       x = "Year",
+       title = "Interest Rates and Inflation",
+       subtitle = "Interest rate in purple, inflation in orange",
+       caption = "Source: U.S. Bureau of Labor Statistics") +
+  theme_classic() +
+  theme(plot.title = element_text(hjust = .5),
+        plot.subtitle = element_text(hjust = .5))
+  
 ```
 
 6. Make a graph comparing the average monthly interest rate when inflation is high (0.6% or greater) vs. normal (less than 0.6%), additionally comparing between the year 2000 and later vs. earlier.
@@ -98,6 +107,14 @@ df |>
   filter(!is.na(inflation_high)) |>
   ggplot() +
     geom_bar(aes(x = time, y = mean_ir, fill = inflation_high),
-              stat = "identity", position = "dodge")
+              stat = "identity", position = "dodge") +
+  labs(y = "Mean Interest Rate",
+       x = "Time Period",
+       fill = "Inflation",
+       title = "Interest Rates Under High and Normal Inflation",
+       caption = "Source: U.S. Bureau of Labor Statistics") +
+  theme_classic() +
+  theme(plot.title = element_text(hjust = .5),
+        legend.position = "bottom")
 ```
     
