--- a/assignments/final_exam/final_exam.qmd
+++ b/assignments/final_exam/final_exam.qmd
@@ -95,26 +95,43 @@ poll |>
   theme(plot.title = element_text(hjust = .5))
 ```
 
-4. A "feeling thermometer" question asks respondents to rate their feelings towards a person, place, or thing on a scale of 1 to 100, where 1 is very "cold" or negative and 100 is very "warm" or positive.
-    
-    Conduct a weighted hypothesis test showing whether **Independents** who are satisfied with American democracy feel more warmly towards President Biden (variable `ftbiden`) than those who are not satisfied. You must write both the $H_0$ and the $H_A$. How do you interpret the results of your hypothesis test?
+4. Conduct a weighted hypothesis test showing whether a majority of Americans are satisfied with American democracy. You must write both the $H_0$ and the $H_A$. How do you interpret the results of your hypothesis test?
 
 ```{r}
 #| label: hypothesis_test
 
-poll2 <-
-  poll |>
-  filter(party == "Independent") |>
-  mutate(satisfied = factor(satisfied, levels = c("Satisfied", "Not Satisfied")))
-
-weighted_ttest(ftbiden ~ satisfied + weight,
-               poll2,
-               alternative = "greater")
+poll |>
+  mutate(satisfied = ifelse(demsatisfy %in% c(1:3), 1, 0)) |>
+  weighted_ttest(satisfied,
+                 mu = .5,
+                 weights = weight,
+                 alternative = "greater")
 ```
 
-5. Conduct a linear probability model regression of satisfaction with American democracy on political party and at least two confounders. Use Independents as your reference level for political party. Please explain why you chose to control for those two confounders (i.e., why do you think that variable is a confounder?)
+5. Conduct a linear probability regression model of satisfaction with American democracy (the dependent variable) on political party. Use Independents as your reference level for political party.
 
     How do you interpret the effect of political party on satisfaction with American democracy?
+
+```{r}
+#| label: regression1
+
+poll2 <-
+  poll |>
+  mutate(satisfied = ifelse(demsatisfy %in% c(1:3), 1, 0),
+         party = relevel(factor(party), ref = "Independent"))
+
+reg1 <- lm(satisfied ~ party, data = poll2)
+
+tab_model(reg1,
+          pred.labels = c("Intercept", "Democrat", "Republican"),
+          dv.labels = "Satisfied with Democracy")
+```
+
+6. A "feeling thermometer" question asks respondents to rate their feelings towards a person, place, or thing on a scale of 0 to 100, where 0 is very "cold" or negative and 100 is very "warm" or positive.
+
+    Conduct a linear regression of how warmly respondents feel towards President Biden (variable `ftbiden`, the dependent variable) on satisfaction with democracy and at least two confounders. Please explain why you chose to control for those two confounders (i.e., why do you think that variable is a confounder?)
+
+    How do you interpret the effect of satisfaction with American democracy on feelings toward President Biden?
 
     Some potential confounders include:
 
@@ -125,19 +142,17 @@ weighted_ttest(ftbiden ~ satisfied + weight,
     * Urban-rural status: `urbanicity2` (1 - Big city, 2 - Smaller city, 3 - Suburban area, 4 - Small town, 5 - Rural area)
     
     *Hint: Make sure that categorical variables are treated as such in the regression, and not as continuous variables.*
-
+    
 ```{r}
-#| label: regression
+#| label: regression2
 
 poll3 <-
-  poll |>
-  mutate(satisfied = ifelse(demsatisfy %in% c(1:3), 1, 0),
-         educ = factor(educ),
-         party = relevel(factor(party), ref = "Independent"))
+  poll2 |>
+  mutate(educ = factor(educ))
 
-reg1 <- lm(satisfied ~ party + educ + faminc_new, data = poll3)
+reg2 <- lm(ftbiden ~ satisfied + educ + faminc_new, data = poll3)
 
-tab_model(reg1,
-          pred.labels = c("Intercept", "Democrat", "Republican", "High School", "Some College", "Associate's", "Bachelor's", "Post-grad", "Income"),
-          dv.labels = "Satisfied with Democracy")
+tab_model(reg2,
+          pred.labels = c("Intercept", "Satisfied with Democracy", "High School", "Some College", "Associate's", "Bachelor's", "Post-grad", "Income"),
+          dv.labels = "Feeling Thermometer: Biden")
 ```
